--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alchemy-sdk": "^3.3.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.12.1"
   }
